gitops/apps/demo/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-demo-stable
  namespace: demo
spec:
  selector: {app: rollout-demo} # o Rollout acrescenta o hash de cada versão
  ports:
    - {port: 80, targetPort: http}
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-demo-canary
  namespace: demo
spec:
  selector: {app: rollout-demo} # o Rollout acrescenta o hash de cada versão
  ports:
    - {port: 80, targetPort: http}
